# flight-calendar-updater

./: .env.example  .gitignore  README.md  create_calendar_events.py  extract_flight.py  main.py  pyproject.toml  requirements.txt  scheduler.py
install/: install.sh  projects_flight_calendar_updater.service
scripts/: merge_csv_to_sheet.py
src/: __init__.py  calendar_client.py  config.py  datamodels.py  extract_flight.py  extract_flight_ai.py  extract_flight_scrape.py  main.py  scheduler.py  sheets_client.py  values.py.example
tests/: conftest.py  test_config.py  test_datamodels.py  test_main.py  test_scraper.py
