[project]
name = "flight-calendar-updater"
version = "0.1.0"
description = ""
authors = [
    {name = "momonala", email = "mnalavadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-auth-httplib2>=0.0.0,<1.0.0",
    "google-auth-oauthlib>=0.0.0,<1.0.0",
    "pandas",
    "requests>=2.0.0,<3.0.0",
    "beautifulsoup4>=4.0.0,<5.0.0",
    "airportsdata",
    "country-converter>=1.0.0,<2.0.0",
    "pycountry>=24.0.0,<25.0.0",
    "pytz",
    "schedule",
    "brotli>=1.2.0",
    "zstandard>=0.25.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "isort>=7.0.0",
    "typer>=0.9.0",
    "asyncio>=4.0.0",
]

[tool.config]
# This project is primarily configured via secrets in src/values.py
# No non-secret configuration needed currently

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
foo = "src.main:main"
config = "src.config:main"


[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v --cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
